--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -150,7 +150,7 @@ BINARY_TOC             = NO
 TOC_EXPAND             = YES
 DISABLE_INDEX          = YES
 ENUM_VALUES_PER_LINE   = 1
-GENERATE_TREEVIEW      = NO
+GENERATE_TREEVIEW      = YES
 TREEVIEW_WIDTH         = 250
 #---------------------------------------------------------------------------
 # configuration options related to the LaTeX output
