--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -289,6 +289,8 @@ if (NOT TOOL_DR_HEAPSTAT)
   # FIXME: we should set up a suite like DR uses.  For now hand-picking
   # a few to run w/ options.
   newtest_nobuild(leaks-only malloc "" "-leaks_only" "" OFF)
+  newtest_nobuild(slowpath registers "" "-no_fastpath" "" OFF)
+  newtest_nobuild(slowesp registers "" "-no_esp_fastpath" "" OFF)
 
   # shared by all suppress tests
   tobuild(suppress suppress.c)
