--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1069,6 +1069,8 @@ if (UNIX)
     install(CODE "file(GLOB debugfiles \"${DynamoRIO_DIR}/../lib32/debug/*.debug\")\nforeach (dbg \${debugfiles})\n  configure_file(\"\${dbg}\" \"\${CMAKE_INSTALL_PREFIX}/${DR_install_dir}/lib32/debug/\" COPYONLY)\nendforeach()")
     # ext dir is currently empty but we need it to avoid drrun error (i#427)
     install(CODE "file(MAKE_DIRECTORY \"\${CMAKE_INSTALL_PREFIX}/${DR_install_dir}/ext/lib32/debug\")")
+    # CPack seems to ignore empty dirs so add a README file
+    install(CODE "file(WRITE \"\${CMAKE_INSTALL_PREFIX}/${DR_install_dir}/ext/lib32/debug/README\" \"Currently empty.\n\")")
   else (DEBUG_BUILD)
     install(CODE "file(MAKE_DIRECTORY \"\${CMAKE_INSTALL_PREFIX}/${DR_install_dir}/lib32/release\")")
     install(CODE "configure_file(\"${DynamoRIO_DIR}/../lib32/release/libdrpreload.so\" \"\${CMAKE_INSTALL_PREFIX}/${DR_install_dir}/lib32/release/\" COPYONLY)")
@@ -1079,6 +1081,8 @@ if (UNIX)
     install(CODE "file(GLOB debugfiles \"${DynamoRIO_DIR}/../lib32/release/*.debug\")\nforeach (dbg \${debugfiles})\n  configure_file(\"\${dbg}\" \"\${CMAKE_INSTALL_PREFIX}/${DR_install_dir}/lib32/release/\" COPYONLY)\nendforeach()")
     # ext dir is currently empty but we need it to avoid drrun error (i#427)
     install(CODE "file(MAKE_DIRECTORY \"\${CMAKE_INSTALL_PREFIX}/${DR_install_dir}/ext/lib32/release\")")
+    # CPack seems to ignore empty dirs so add a README file
+    install(CODE "file(WRITE \"\${CMAKE_INSTALL_PREFIX}/${DR_install_dir}/ext/lib32/release/README\" \"Currently empty.\n\")")
   endif (DEBUG_BUILD)
 endif (UNIX)
 
