fixes issue 545 + use a free list to re-use generated realloc replacements   from prior unloaded modules + added a test that re-loads a library 50x + turned off /RTC1 for new test, so re-instated   float test uninit on windows (i#149)
SVN-Revision: 461

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -44,6 +44,9 @@ endif ()
 function(set_props target)
   if (UNIX)
     set(defs "-DLINUX")
+    if (HAVE_FVISIBILITY)
+      set(defs "${defs} -DUSE_VISIBILITY_ATTRIBUTES")
+    endif (HAVE_FVISIBILITY)
   else (UNIX)
     set(defs "-DWINDOWS")
   endif (UNIX)
@@ -58,9 +61,16 @@ function(tobuild name source)
   set_props(${name})
 endfunction(tobuild)
 
-function(tobuild_lib name source)
+function(tobuild_lib name source cust_flags cust_link)
   add_library(${name} SHARED ${source})
   set_props(${name})
+  get_target_property(cur_flags ${name} COMPILE_FLAGS)
+  set_target_properties(${name} PROPERTIES COMPILE_FLAGS "${cur_flags} ${cust_flags}")
+  get_target_property(cur_link ${name} LINK_FLAGS)
+  if (NOT cur_link)
+    set(cur_link "")
+  endif (NOT cur_link)
+  set_target_properties(${name} PROPERTIES LINK_FLAGS "${cur_link} ${cust_link}")
 endfunction(tobuild_lib)
 
 # tools for nudge tests
@@ -122,6 +132,9 @@ else (UNIX)
   string(REGEX REPLACE "/D_DEBUG" "" CMAKE_CXX_FLAGS_${CMAKE_BUILD_TYPE_UPPER}
     "${CMAKE_CXX_FLAGS_${CMAKE_BUILD_TYPE_UPPER}}")
   string(REGEX REPLACE "/O2" "/Od" CMAKE_C_FLAGS_${CMAKE_BUILD_TYPE_UPPER}
+    "${CMAKE_C_FLAGS_${CMAKE_BUILD_TYPE_UPPER}}")
+  # removing RTC really just for tests/unload
+  string(REGEX REPLACE "/RTC1" "" CMAKE_C_FLAGS_${CMAKE_BUILD_TYPE_UPPER}
     "${CMAKE_C_FLAGS_${CMAKE_BUILD_TYPE_UPPER}}")
   if (NOT DEBUG_BUILD)
     if ("${CMAKE_GENERATOR}" MATCHES "Visual Studio")
@@ -273,12 +286,23 @@ if (UNIX)
   newtest_ex(execve execve.c "${malloc_path}" "" "" OFF)
   newtest(pthreads pthreads.c)
   target_link_libraries(pthreads pthread)
-  tobuild_lib(loaderlib loader.lib.c)
+  tobuild_lib(loaderlib loader.lib.c "" "")
   get_relative_location(loaderlib loaderlib_path)
   newtest_ex(loader loader.c "${loaderlib_path}" "" "" OFF)
   target_link_libraries(loader dl)
 else (UNIX)
   newtest(winthreads winthreads.c)
+endif (UNIX)
+
+if (UNIX)
+  tobuild_lib(unloadlib unload.lib.c "-fno-builtin" "")
+else (UNIX)
+  tobuild_lib(unloadlib unload.lib.c "" "/nodefaultlib /noentry")
+endif (UNIX)
+get_relative_location(unloadlib unloadlib_path)
+newtest_ex(unload unload.c "${unloadlib_path}" "" "" OFF)
+if (UNIX)
+  target_link_libraries(unload dl)
 endif (UNIX)
 
 if (NOT TOOL_DR_HEAPSTAT)
