fixes issue 564 + ensure at least one member of indirect leak group   is left as a direct leak and is thus reported + added test to suite
SVN-Revision: 478

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -394,4 +394,6 @@ newtest_nobuild(nudge run_in_bg_tgt
   "-out;./nudge-out"
   "${nudge_test_args}--;${infloop_path}" "" OFF)
 
+newtest(leakcycle leakcycle.cpp)
+
 add_subdirectory(app_suite)
