fixes issue 290 fixes issue 24 fixes issue 381 callstack formatting options + switched to a structured callstack format for more   flexibility wrt display and suppression + switched to a structured suppression format + rewrote suppression parser to map the file to avoid   doings its own buffering: requires DR i#542 + suppression parser now detects more errors because it   actually parses into fields (i#24) + added -callstack_style option that controls how callstacks   are printed, with control over which offsets are included,   frame numbers, whether file:line is on a new line, etc.,   and with file:line in [] and abs <mod+offs> in () + changed default callstack format to look like this:   # 0 suppress.exe!unaddr_test1                        [e:\derek\drmemory\git\src\tests\suppress.c:110] + trim trailing whitspace from supp frames (i#381) + require hex const for offs in docs and parser + updated postprocess.pl to match client code + updated heapstat parsing to support new format + make module name case-insensitive on windows in postprocess.pl
SVN-Revision: 485

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -191,6 +191,8 @@ function(newtest_nobuild test exe test_ops drmem_ops dr_ops postprocess)
     set(cmd ${cmd} -dr_ops "${default_dr_ops}")
   endif ()
   # script ops last since using as hack for nudge test app
+  # we request callstacks w/ file:line on separate line for matching our templates
+  set(drmem_ops -callstack_style 0x21 ${drmem_ops})
   if (NOT "${drmem_ops}" STREQUAL "")
     set(cmd ${cmd} ${drmem_ops})
   endif ()
@@ -220,7 +222,9 @@ function(newtest_nobuild test exe test_ops drmem_ops dr_ops postprocess)
   string(REGEX REPLACE " " "@@" nudge "${cmd_base}")
   string(REGEX REPLACE ";" "@" nudge "${nudge}")
   if (TOOL_DR_HEAPSTAT)
-    set(postcmd "${cmd_base};-view_leaks;-x;${exepath};-profdir")
+    # XXX: this works manually but doesn't seem to get through ctest: but
+    # the test is passing so not taking the time to figure it out
+    set(postcmd "${cmd_base};-view_leaks;-callstack_style 0x21;-x;${exepath};-profdir")
   else (TOOL_DR_HEAPSTAT)
     if (postprocess)
       # test -skip_results + -results (PR 575481)
