i#589, part 3: easier-to-read error reports: + added -brief option which:   - enables -callstack_srcfile_hide "*visual studio*,*self_x86*"   - enables -callstack_srcfile_prefix <executable_path>   - hides absolute addresses in error reports   - prints how far offset from nearby mallocs + analyze nearby allocs on invalid heap arg + report double free as such + do not consider overlap w/ freed memory if only overlaps redzone
SVN-Revision: 512

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -352,8 +352,15 @@ if (NOT TOOL_DR_HEAPSTAT)
   # the second run.  it looks for "suppress" with no "-suppress" option,
   # rather than taking explicit params, and for the 2nd run uses the
   # suppress output files
-  newtest_nobuild(suppress-genoffs suppress "" "-no_gen_suppress_syms;-callstack_modname_hide;;" "" OFF)
-  newtest_nobuild(suppress-gensyms suppress "" "-no_gen_suppress_offs;-callstack_modname_hide;;" "" OFF)
+  if (USE_DRSYMS)
+    newtest_nobuild(suppress-genoffs suppress ""
+      "-no_gen_suppress_syms;-callstack_modname_hide;;" "" OFF)
+    newtest_nobuild(suppress-gensyms suppress ""
+      "-no_gen_suppress_offs;-callstack_modname_hide;;" "" OFF)
+  else (USE_DRSYMS)
+    newtest_nobuild(suppress-genoffs suppress "" "-no_gen_suppress_syms" "" OFF)
+    newtest_nobuild(suppress-gensyms suppress "" "-no_gen_suppress_offs" "" OFF)
+  endif (USE_DRSYMS)
 
   set(nudge_test_args "")
 
