i#118: Check def and addr of cstrings passed to syscalls on Linux
Follows the sysarg type machinery being used on Windows to call handle_cstring
for each cstring syscall argument.


SVN-Revision: 521

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -282,6 +282,7 @@ newtest(patterns patterns.c)
 
 if (UNIX)
   newtest(signal signal.c)
+  newtest(unix_syscalls unix_syscalls.c)
   target_link_libraries(signal m)
   if (NOT VMKERNEL)
     # PR 468352: SYS_clone w/o CLONE_SETTLS not supported on ESXi
