turn -results_to_stderr on by default + -quiet overrides it + frontend prints leaks in addition to summary for <win7 + frontend doesn't print anything for vista+ due to   DRi#440 (on win7 anyway) enabling exit-time console printing + frontend doesn't print leaks for graphical apps since they   don't have other errors shown + turn off stderr for tests
SVN-Revision: 528

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -193,7 +193,11 @@ function(newtest_nobuild test exe test_ops drmem_ops dr_ops postprocess)
   # script ops last since using as hack for nudge test app
   # we request callstacks w/ file:line on separate line for matching our templates
   # we include absaddr and mod+offs for easier debugging of problems
-  set(drmem_ops -callstack_style 0x27 ${drmem_ops})
+  if (USE_DRSYMS)
+    set(drmem_ops -callstack_style 0x27 -no_results_to_stderr ${drmem_ops})
+  else (USE_DRSYMS)
+    set(drmem_ops -callstack_style 0x27 ${drmem_ops})
+  endif (USE_DRSYMS)
   if (NOT "${drmem_ops}" STREQUAL "")
     set(cmd ${cmd} ${drmem_ops})
   endif ()
