fixes issue 604 cache symbol locations for re-use on subsequent runs + cache symbols in per-module files + using just module name for file name + storing module consistency info in the file + for file self-consistency just using size stored in file + cache stores negative entries as well + simple versioning of file format + auto-cache for simple lookups and for   exports that are tried afterward + manual cache for searches and enums
SVN-Revision: 544

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -638,6 +638,9 @@ else (TOOL_DR_HEAPSTAT)
     common/utils.c
     common/redblack.c
     common/crypto.c)
+  if (USE_DRSYMS)
+    set(srcs ${srcs} common/symcache.c)
+  endif (USE_DRSYMS)
   if (UNIX)
     set(srcs ${srcs} drmemory/syscall_linux.c)
   else (UNIX)
