--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -326,6 +326,7 @@ if (NOT TOOL_DR_HEAPSTAT)
   newtest_nobuild(slowpath registers "" "-no_fastpath" "" OFF)
   newtest_nobuild(slowesp registers "" "-no_esp_fastpath" "" OFF)
   newtest_nobuild(addronly free "" "-no_check_uninitialized" "" OFF)
+  newtest_nobuild(addronly-reg registers "" "-no_check_uninitialized" "" OFF)
   newtest_nobuild(reachable cs2bug "" "-show_reachable" "" OFF)
 
   # shared by all suppress tests
