fixes issue 282 + support Valgrind format with DrMem types   - added an example to suppression test: "Dr.Memory:UNADDRESSABLE ACCESS"   - added a warning about using deprecated legacy format + added valgrind2drmemory.pl script that converts Memcheck   suppressions to DrMem suppressions.   - tries to handle mangled symbols with wildcards and does     a good job on most, but it's not an easy problem and in     some cases it is impossible to know for sure what was meant:     I thought about having the user pass in the executable (w/     Valgrind suppression limitations there's like to be only one app per     suppression file) but analyzing its symbols gets complex too.   - installed into build bin/ and exports bin/   - documented how to use it   - tested on chromium/src/tools/valgrind/memcheck/suppressions.txt     and /usr/lib/valgrind/default.supp   - on chrome file, fails on 8 frames: 3 have no wildcards and are buggy     frames (somebody copied another symbol and incorrectly modified it w/o     changing the embedded length specifiers), and the other 5 are very     complex and not a single one exists in today's chrome build. + bailing for now on the idea of having the client support mangled-wildcard   frames at runtime: not worth it w/ the script in place, which IMHO is a   better solution as it allows the user to then edit and append to the   new-format file.  perhaps for now a user would still use Memcheck on   Linux, but hopefully in a year or so we can have 64-bit Linux Dr. Memory   good enough that there's no reason to keep suppressions for both tools.
For testing I did not do any runs, simply ensured the suppressions were
valid by reading them back in (and reading originals):
  > bin/valgrind2drmemory.pl ~/work/chromium/src/tools/valgrind/memcheck/suppressions.txt /tmp/x
  > bin/valgrind2drmemory.pl /usr/lib/valgrind/default.supp /tmp/y
  > bin/drmemory.pl -suppress /usr/lib/valgrind/default.supp -suppress /tmp/y -suppress ~/work/chromium/src/tools/v
  > grep f

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -889,6 +889,10 @@ else (WIN32)
       ARGS -E copy "${DynamoRIO_DIR}/../bin32/drconfig"
       "${drconfig_copy}" VERBATIM)
   endif (USER_SPECIFIED_DynamoRIO_DIR)
+  if (NOT TOOL_DR_HEAPSTAT)
+    configure_file("${CMAKE_CURRENT_SOURCE_DIR}/tools/valgrind2drmemory.pl"
+      "${PROJECT_BINARY_DIR}/${BUILD_BIN_PREFIX}/valgrind2drmemory.pl" COPYONLY)
+  endif (NOT TOOL_DR_HEAPSTAT)
 endif (WIN32)
 if (TOOL_DR_HEAPSTAT)
   # we need a copy of Dr. Memory's postprocess for leaks (PR 536878)
@@ -993,6 +997,13 @@ else (TOOL_DR_HEAPSTAT)
     ${PROJECT_BINARY_DIR}/${BUILD_BIN}/suppress-default.txt
     DESTINATION "${INSTALL_BIN}"
     PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
+  if (UNIX)
+    install(FILES
+      ${PROJECT_BINARY_DIR}/${BUILD_BIN_PREFIX}/valgrind2drmemory.pl
+      DESTINATION "bin"
+      PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE
+      WORLD_READ WORLD_EXECUTE)
+  endif (UNIX)
 endif (TOOL_DR_HEAPSTAT)
 install(DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}/
   DESTINATION "${INSTALL_LIB}"
